--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -38,6 +38,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 "data": {
                     "type": "DudeGraphElement",
                     "readonly": true
+                },
+                "panelTitle": {
+                    "type": String,
+                    "value": "Inspector",
+                    "readonly": true
                 }
             },
 
@@ -46,7 +51,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * Notifies the dude-stack
              */
             attached: function () {
-                this.fire("dude-stack-attached");
+                this.fire("dude-inspector-attached");
             },
 
             /**
