--- a/panels/dude-graph-edit-block.html
+++ b/panels/dude-graph-edit-block.html
@@ -42,6 +42,11 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                 "data": {
                     "type": "DudeGraphElement",
                     "readonly": true
+                },
+                "panelTitle": {
+                    "type": String,
+                    "value": "Edit block",
+                    "readonly": true
                 }
             },
 
@@ -50,7 +55,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * Notifies the dude-stack
              */
             attached: function () {
-                this.fire("dude-stack-attached");
+                this.fire("dude-inspector-attached");
             },
 
             /**
