--- a/demo/audigame/audigame.html
+++ b/demo/audigame/audigame.html
@@ -87,6 +87,22 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
                     "type": Array,
                     "value": DUDE_GRAPH_RENDER_BLOCK_TYPES
                 }
+            },
+            listeners: {
+                "dude-graph-save": "_save"
+            },
+
+            /**
+             * Saves the graph and renderer data to local storage
+             * @param {CustomEvent} e
+             * @param {Object} e.detail
+             * @param {Object} e.detail.graphData
+             * @param {Object} e.detail.rendererData
+             * @private
+             */
+            _save: function (e) {
+                this.set("graphData", e.detail.graphData);
+                this.set("rendererData", e.detail.rendererData);
             }
         });
     </script>
