--- a/dude-graph.html
+++ b/dude-graph.html
@@ -232,7 +232,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              */
             createBlock: function (blockData) {
                 var block = this.get("loader").loadBlock(this.get("graph"), _.merge(blockData, {
-                    "blockId": dudeGraph.uuid()
+                    "blockId": this.get("graph").nextBlockId()
                 }));
                 return this.renderer.createRenderBlock({
                     "id": block.blockId,
