--- a/panels/dude-graph-create.html
+++ b/panels/dude-graph-create.html
@@ -91,7 +91,7 @@ Copyright (c) 2015 DudeTeam. All rights reserved.
              * @private
              */
             _save: function () {
-                this.get("data").fire("dude-graph-save", this.get("data").save());
+                this.get("data").emitSave();
             }
         });
     </script>
